<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2e9e1">

    <com.example.user.grub.MyCustomTextView
        android:id="@+id/header_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_header"
        android:textColor="@color/colorPrimary"
        android:textSize="55sp"
        android:layout_gravity="center"
        android:includeFontPadding="true"
        android:paddingBottom="30sp"/>

    <EditText
        android:id="@+id/description_input_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/description"
        android:textSize="35sp"/>

    <EditText
        android:id="@+id/date_consumed_input_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/date_consumed"
        android:textSize="35sp"/>

    <EditText
        android:id="@+id/quantity_input_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/quantity"
        android:textSize="35sp"/>

    <EditText
        android:id="@+id/measure_input_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/measure"
        android:textSize="35sp"/>

    <EditText
        android:id="@+id/meal_type_input_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/meal_type"
        android:textSize="35sp"/>

    <Button
        android:id="@+id/ask_calories_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask"
        android:textSize="45sp"
        android:background="@drawable/button_styler"
        android:padding="20dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:paddingBottom="45sp"/>

    <com.example.user.grub.MyCustomTextView
        android:id="@+id/calories_answer_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:text="total calories:"
        android:layout_gravity="center"
        android:paddingTop="30sp"/>

    <com.example.user.grub.MyCustomTextView
        android:id="@+id/calories_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:paddingBottom="30sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/ask_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:textSize="45sp"
        android:background="@drawable/button_styler"
        android:padding="20dp"
        android:textAllCaps="false"
        android:layout_gravity="center"/>

</LinearLayout>