<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/header"
        android:layout_height="100dp"
        android:layout_width="175dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="75sp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/goal"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/header"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/goal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:includeFontPadding="true"
        android:layout_alignParentTop="false"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/ask_button"
        android:layout_toStartOf="@+id/ask_button" />

    <TextView
        android:id="@+id/goal_value"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/goal"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/goal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:includeFontPadding="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/remaining"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/header"
        android:layout_toRightOf="@+id/goal"
        android:text="@string/remaining"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:includeFontPadding="true"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/remaining_value"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/remaining"
        android:layout_toRightOf="@+id/goal"
        android:text="@string/remaining"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:includeFontPadding="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/add"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/add"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:includeFontPadding="true"
        android:layout_below="@+id/goal_value"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/goal"
        android:layout_alignEnd="@+id/goal" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:textSize="25sp"
        android:layout_below="@+id/add"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/ask"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/remaining_value"
        android:layout_toEndOf="@id/add"
        android:layout_toRightOf="@id/add"
        android:text="@string/ask"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false" />

    <Button
        android:id="@+id/ask_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_button"
        android:textSize="25sp"
        android:layout_alignTop="@+id/add_button"
        android:layout_toRightOf="@+id/goal_value"
        android:layout_toEndOf="@+id/goal_value" />

</RelativeLayout>